# Rtype

./: .codedocs  .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  LICENSE  README.md  SECURITY.md  comp.sh  comp_linux.sh  comp_windows.sh  conanfile.txt  docker_exec_script.sh  dockerfile  fix_audio.sh  linux_installer.sh  recomp.sh  tempFile  test.txt  windows_installer.sh
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: android_compile.yml  android_compile_linux.yml  android_compile_windows.yml  code_analysis.yml  code_analysis___tmp.yml  codeql.yml  github-action-prototype1.yml  push_on_teck.yml  test_linux_compile.yml  test_macos_compile.yml  test_windows_compile.yml
dependencies/: CMakeLists.txt
dependencies/sfml/: CMakeLists.txt
src/: NetworkStructs.hpp  Systems.cpp  Systems.hpp  main.cpp
src/Client/: ChooseLvl.cpp  ChooseLvl.hpp  Client.cpp  Client.hpp  Connection.cpp  Connection.hpp  Game.cpp  Game.hpp  MainMenu.cpp  MainMenu.hpp  MapVoter.cpp  MapVoter.hpp  Miscellaneous.cpp  Miscellaneous.hpp  OptionsMenu.cpp  OptionsMenu.hpp  PauseMenu.cpp  PauseMenu.hpp  Settings.cpp  Settings.hpp  client.cpp  main.cpp
src/ClientSystems/: ClientSystems.cpp  ClientSystems.hpp  GraphicsSystems.cpp  GraphicsSystems.hpp  NetworkSystems.cpp  NetworkSystems.hpp  Systems.cpp
src/Components/: AudioSource.hpp  Background.hpp  Bonus.hpp  Bullet.hpp  Button.hpp  ClientComps.hpp  Components.hpp  Controllable.hpp  Drawable.hpp  EnemyStats.hpp  Music.hpp  PlayerStats.hpp  Position.hpp  RectCollider.hpp  Shooter.hpp  Synced.hpp  Velocity.hpp  Writable.hpp
src/Engine/: Engine.cpp  Engine.hpp  Entity.cpp  Entity.hpp  IRegistry.hpp  IRegistryManager.hpp  Log.cpp  Log.hpp  Makefile  PlayerPreferences.txt  PlayerPrefs.cpp  PlayerPrefs.hpp  Registry.cpp  Registry.hpp  RegistryManager.cpp  RegistryManager.hpp  SparseArray.hpp  main.cpp  main_tmp.cpp  tests.cpp
src/Game/Client/: Client.cpp  Client.hpp  client.cpp  client.hpp
src/Game/GameLogic/: main.cpp  papa.cpp
src/Game/Server/: Lobby.cpp  Lobby.hpp  LobbyManager.cpp  LobbyManager.hpp  Server.cpp  Server.hpp  ThreadPool.cpp
src/GameComponent/: Background.hpp  Bullet.hpp  Button.hpp  Canon.hpp  Controllable.hpp  EnemyStats.hpp  PlayerStats.hpp  Shooter.hpp  Synced.hpp
src/Network/: Network.cpp  Network.hpp  NetworkStructs.hpp  TCPClient.cpp  TCPClient.hpp  TCPServer.cpp  TCPServer.hpp  UDPClient.cpp  UDPClient.hpp  UDPServer.cpp  UDPServer.hpp
src/Scene/: AScene.cpp  AScene.hpp  ChooseLvl.cpp  ChooseLvl.hpp  Credits.cpp  Credits.hpp  End.cpp  End.hpp  Game.cpp  Game.hpp  IScene.hpp  MainMenu.cpp  MainMenu.hpp  Pause.cpp  Pause.hpp  Settings.cpp  Settings.hpp  WaitingRoom.cpp  WaitingRoom.hpp
src/Server/: Lobby.cpp  Lobby.hpp  LobbyManager.cpp  LobbyManager.hpp  Server.cpp  Server.hpp  ThreadPool.cpp  ThreadPool.hpp  TimeSystem.cpp  main.cpp  mainServer.cpp
src/ServerSystems/: BonusSystem.cpp  DataSystem.cpp  DataSystems.cpp  DataSystems.hpp  EnemySystem.cpp  PlayerSystem.cpp  ServerSystems.cpp  ServerSystems.hpp  ServerSystems_tmp.cpp  SystemsServer.cpp  TimeSystem.cpp
src/System/: BackgroundSystem.cpp  BackgroundSystem.hpp  ButtonSystem.cpp  ButtonSystem.hpp  ClientSystem.cpp  ClientSystem.hpp  EnemySystem.cpp  EnemySystem.hpp  KillSystem.cpp  KillSystem.hpp  PlayerSystem.cpp  PlayerSystem.hpp  ServerSystem.cpp  ServerSystem.hpp  TextSystem.cpp  TextSystem.hpp
src/Systems/: Systems.cpp  Systems.hpp
src/SystemsServer/: SystemsServer.cpp  SystemsServer.hpp
